--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,36 @@
-.App {
-  text-align: center;
+
+#question, #answer {
+  width: 30%;
+  padding-left: 1em;
+  font-family: "Abril Fatface",Georgia, serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#question{
+  margin-top: 2em;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+
+.list-container {
+  margin-top: 3em;
+  font-family: "Abril Fatface",Georgia, serif;
+}
+
+.list-items {
+  display: block;
+  margin: 0.5em auto;
+  border: 1px solid #e0e0e0;
+  width: 30%;
+  padding:1em 1em;
+
+}
+
+.indivTitle {
   color: white;
+  text-align: center;
+  padding: 2em 0;
+  font-family: "Open Sans", Arial, sans-serif;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.btnContainer {
+  margin-top: 1em;
 }
